# efficient_pca

./: Cargo.toml  README.md  fix_compute_pca_calls.py  fix_diagnostics_tests.py  get_sklearn_pca_outputs.py  pca_reference_results.json  test_system_backend.rs
.github/workflows/: rust.yml
benches/: analyze_benchmarks.py  benchmark.rs  benchmarks.rs  pca_benchmark.rs
examples/: test_backends.rs
src/: EIGENSNP.md  diagnostics.rs  eigensnp.rs  eigensnp_tests.rs  lib.rs  linalg_backends.rs  pca.rs  pca_tests.rs  tests.rs
tests/: analyze_eigensnp_results.py  eigensnp_diagnostics_tests.rs  eigensnp_tests.rs  pca.py  pca_tests.rs  python_bootstrap.rs
